[gd_scene load_steps=6 format=3 uid="uid://du60tw8uyoqwb"]

[ext_resource type="Script" path="res://scripts/characters/collab_partners/collab_partner.gd" id="1_e3rtq"]
[ext_resource type="PackedScene" uid="uid://cgic4q8egbmxp" path="res://scenes/characters/character_animation.tscn" id="2_gnahg"]
[ext_resource type="PackedScene" uid="uid://cpp0tc7uqrv4" path="res://scenes/shared/hurtbox.tscn" id="3_gqdkd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yxx13"]
radius = 4.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7uggt"]
radius = 24.0
height = 48.0

[node name="CollabPartner" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 8
motion_mode = 1
script = ExtResource("1_e3rtq")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -13)

[node name="CharacterAnimation" parent="." node_paths=PackedStringArray("character") instance=ExtResource("2_gnahg")]
position = Vector2(0, -13)
character = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_yxx13")

[node name="Hurtbox" parent="." instance=ExtResource("3_gqdkd")]
position = Vector2(0, -13)
collision_layer = 2
owned_by = 1

[node name="CollisionPolygon2D" parent="Hurtbox" index="0"]
polygon = PackedVector2Array(-5, -1, -5, 14, 5, 14, 5, -1)

[node name="InteractiveObjectZone" type="Area2D" parent="."]
position = Vector2(0, -2)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveObjectZone"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_7uggt")

[node name="AIHPLossTimer" type="Timer" parent="."]

[connection signal="take_damage" from="Hurtbox" to="." method="_on_hurtbox_take_damage"]
[connection signal="timeout" from="AIHPLossTimer" to="." method="_on_aihp_loss_timer_timeout"]

[editable path="Hurtbox"]
